# ArguingWithNeuralNetworksPublic

./: .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
outputs/cancer/aae/: mlp100_25_gradient.npz  mlp100_25_removal.npz  mlp100_25_shap.npz  mlp100_gradient.npz  mlp100_removal.npz  mlp100_shap.npz  mlp10_100_10_gradient.npz  mlp10_100_10_removal.npz  mlp10_100_10_shap.npz  mlp10_10_10_gradient.npz  mlp10_10_10_removal.npz  mlp10_10_10_shap.npz  mlp10_10_gradient.npz  mlp10_10_removal.npz  mlp10_10_shap.npz  mlp10_50_10_gradient.npz  mlp10_50_10_removal.npz  mlp10_50_10_shap.npz  mlp10_gradient.npz  mlp10_removal.npz  mlp10_shap.npz  mlp15_15_gradient.npz  mlp15_15_removal.npz  mlp15_15_shap.npz  mlp20_20_20_gradient.npz  mlp20_20_20_removal.npz  mlp20_20_20_shap.npz  mlp20_20_gradient.npz  mlp20_20_removal.npz  mlp20_20_shap.npz  mlp20_gradient.npz  mlp20_removal.npz  mlp20_shap.npz  mlp25_100_gradient.npz  mlp25_100_removal.npz  mlp25_100_shap.npz  mlp25_25_gradient.npz  mlp25_25_removal.npz  mlp25_25_shap.npz  mlp30_30_30_gradient.npz  (+47 more)
outputs/cancer/ce/: mlp_10.npz  mlp_10_10.npz  mlp_20.npz  mlp_20_20.npz  mlp_30.npz  mlp_30_30.npz  mlp_40.npz  mlp_5.npz  mlp_50.npz  runtime_mlp_10.npz  runtime_mlp_10_10.npz  runtime_mlp_20.npz  runtime_mlp_20_20.npz  runtime_mlp_30.npz  runtime_mlp_30_30.npz  runtime_mlp_40.npz  runtime_mlp_5.npz  runtime_mlp_50.npz
outputs/cancer/rae/: mlp2_10_removal.npz  mlp2_10_shap.npz  mlp2_2_2_removal.npz  mlp2_2_2_shap.npz  mlp2_2_removal.npz  mlp2_2_shap.npz  mlp2_removal.npz  mlp2_shap.npz  mlp3_3_removal.npz  mlp3_3_shap.npz  mlp3_removal.npz  mlp3_shap.npz
outputs/compas/aae/: mlp5_5_gradient.npz  mlp5_5_removal.npz
outputs/compas/ce/: mlp_10.npz  mlp_100.npz  mlp_10_10.npz  mlp_20.npz  mlp_20_20.npz  mlp_30.npz  mlp_30_30.npz  mlp_40.npz  (+24 more)
src/analysis_scripts/: aae_analysis_logic.py  cancer_counterfactual_analysis.py  cancer_counterfactual_analysis_runtime.py  cancer_runner_aae.py  cancer_runner_rae.py  compas_counterfactual_analysis.py  compas_counterfactual_analysis_runtime.py  compas_runner_aae.py  compas_runner_rae.py  counterfactual_analysis.py  counterfactual_analysis_runtime.py  covertype_aae_sparx.py  diabetes_runner_aae.py  diabetes_runner_rae.py  generate_analysis_dicts.py  iris_counterfactual_analysis.py  iris_counterfactual_analysis_runtime.py  iris_runner_aae.py  iris_runner_rae.py  rae_analysis_logic.py
src/mlp_to_qbaf_converter/: __init__.py  argument_attribution_explanation.py  counterfactual_contestability_explanation.py  errors.py  mlp_to_qbaf.py  relation_attribution_explanation.py  utils.py  visualiser.py
src/notebooks/: AAE Results Plots.ipynb  aae_kendall_results.csv  aae_rankings_diff_results.csv  aae_sparx_analysis.ipynb  aae_spearman_results.csv  aae_top_ten_results.csv  cancer_analysis.ipynb  cancer_counterfactual_analysis.ipynb  classifier_cancer.pkl  classifier_compas.pkl  classifier_iris.pkl  compas_analysis.ipynb  compas_counterfactual_analysis.ipynb  compas_load_and_preprocess.py  counterfactual_analysis_optimiser.ipynb  diabetes_analysis.ipynb  diabetes_counterfactual_analysis.ipynb  example_qbaf.ipynb  iris_analysis.ipynb  iris_counterfactual_analysis.ipynb  iris_pytorch.ipynb  iris_sklearn.ipynb  mushroom.ipynb  report_small_example_mlp.ipynb  visualiser_example.ipynb
src/sparx/: __init__.py  aaes_clusterer.py  activations_clusterer.py  cluster.py  local_merger.py  merger.py  sparx.py
src/test/: test_mlp_to_qbaf.py
(+328 files in other folders)
